[package]
name = "bevy_renderer_plus"
version = "0.1.0"
authors = ["Evan Alvarez <evanalvarez@tutanota.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_egui = "0.20.3"
bevy_obj = "0.10.1"
bevy_stl = "0.8.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
